# paperman

./: Cargo.toml  LyuSL17.bib  README.md
src/: app.rs  bibtex.rs  commands.rs  filter.rs  latex_decoder.rs  main.rs  rofi_picker.rs  string_cleaner.rs
