[package]
name = "paperman"
version = "0.1.0"
authors = ["Ossi Räisä <ossi.raisa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
nom-bibtex = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
json = "0.12.4"
